<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/nairobi_image"
                android:scaleType="centerCrop"
                android:src="@drawable/nairobi_experience" />

            <TextView
                android:id="@+id/kenya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/kenya"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                app:fontFamily="@font/alegreya_bold_italic" />

            <TextView
                android:id="@+id/nairobi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/kenya"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:text="@string/nairobi"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="82sp"
                android:textStyle="bold"
                app:fontFamily="@font/bangers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nairobi"
                android:layout_centerHorizontal="true"
                android:text="@string/the_city_reaching_for_the_skies"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:fontFamily="@font/alegreya_bold_italic" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textSize="16sp"
            android:textStyle="italic"
            android:padding="8dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/aboutA"
            android:textSize="16sp"
            android:textStyle="italic"
            android:padding="8dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/aboutB"
            android:textSize="16sp"
            android:textStyle="italic"
            android:padding="8dp"
            android:textColor="@android:color/black"/>


    </LinearLayout>


</ScrollView>
